Rework exchanges, rework stores, add dialog API